--- a/tasks/install-configure.yml
+++ b/tasks/install-configure.yml
@@ -70,3 +70,14 @@
   notify: 
     - Reload Redis
     - Restart Redis
+
+- name: Check Redis Cluster
+  command: redis-cli cluster nodes
+  when: inventory_hostname in groups['cluster-formation-node']
+  register: command_result
+
+- name: Create Redis Cluster
+  command: "redis-cli --cluster create {{ redis_nodeip_port_list }}  --cluster-replicas {{ redis_cluster_replicas }}"
+  args:
+    stdin: "yes"
+  when: inventory_hostname in groups['cluster-formation-node'] and command_result.stdout.split('\n')|length != groups['redis-nodes']|length
