--- a/tasks/install-configure.yml
+++ b/tasks/install-configure.yml
@@ -89,6 +89,16 @@
     enabled: yes
     state: started
 
+- name: Create redis check command without passsword
+  set_fact:
+    redis_check_command: redis-cli cluster nodes
+  when: redis_password is not defined
+
+- name: Create redis check command with password
+  set_fact:
+    redis_check_command: redis-cli cluster nodes -a {{ redis_password }}
+  when: redis_password is not defined
+
 - name: Check Redis Cluster
   command: redis-cli cluster nodes
   when: inventory_hostname in groups['cluster-formation-node']
@@ -110,8 +120,7 @@
 
 - name: Create Redis Cluster
   command: >
-    "redis-cli --cluster create {{ redis_nodeip_port_list }}
-    --cluster-replicas {{ redis_cluster_replicas }}"
+    "{{ cluster_create_command }}"
   args:
     stdin: "yes"
   when: >
