--- a/tasks/check-prerequisities.yml
+++ b/tasks/check-prerequisities.yml
@@ -1,7 +1,7 @@
 ---
 - name: Checking redis hosts are defined or not
   fail:
-    msg: "Playbook execution failed due to missing group 'redis-nodes'"
+    msg: "Playbook execution failed due to missing group"
   when: >
-    groups['redis-nodes'] is not defined or
-    groups['redis-nodes'] | length == 0
+    groups['redis_cluster'] is not defined and
+    groups['standalone'] is not defined
