--- a/tasks/install-configure.yml
+++ b/tasks/install-configure.yml
@@ -1,4 +1,20 @@
 ---
+- name: Channing sysctl parameter for redis performance
+  sysctl:
+    name: vm.overcommit_memory
+    value: "1"
+    state: present
+
+- name: Updating maxconn sysctl parameter for redis
+  sysctl:
+    name: net.core.somaxconn
+    value: "65365"
+    state: present
+
+- name: Disable Kernel Transparent Huge Pages
+  command: "echo never > /sys/kernel/mm/transparent_hugepage/enabled"
+  changed_when: false
+
 - name: Download redis artifact
   unarchive:
     src: "http://download.redis.io/releases/redis-{{ redis_version }}.tar.gz"
