--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,9 +4,15 @@
 
 - name: Configure OS level packages
   include: configure-packages.yml
+  when: >
+    inventory_hostname in groups['redis_nodes'] or
+    inventory_hostname in groups['standalone']
 
 - name: Install and configure redis with common configuration
   include: install-configure.yml
+  when: >
+    inventory_hostname in groups['redis_nodes'] or
+    inventory_hostname in groups['standalone']
 
 - name: Configure standalone Redis Server
   include: standalone.yml
@@ -22,3 +28,15 @@
   include: slave.yml
   when: >
     inventory_hostname in groups['slave_nodes']
+
+- name: Running All Handlers
+  meta: flush_handlers
+
+- name: Including Healthcheck tasks
+  include: healthcheck.yml
+
+- name: Including playbook to create cluster
+  include: create-cluster.yml
+  when: >
+    inventory_hostname in groups['redis_cluster'] and
+    cluster_enabled
