--- a/tests/setupRedisCluster.yml
+++ b/tests/setupRedisCluster.yml
@@ -1,8 +1,10 @@
 ---
+- hosts: redis_nodes
+  become: true
+  roles:
+    - osm_redis
+
 - hosts: redis_cluster
   become: true
   roles:
     - osm_redis
-  post_tasks:
-    - include: tasks/healthcheck.yml
-    - include: tasks/create-cluster.yml
