Changed name for hosts
Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

--- a/roles/redis/tasks/main.yml
+++ b/roles/redis/tasks/main.yml
@@ -2,3 +2,5 @@
 - name: Ensuring pre-requisities are in-place
   include_tasks: prerequisities.yml
 
+- name: Ensuring preinstall packages and configurations
+  include_tasks: preinstall.yml
