Added preinstall steps for redis
Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

--- a/roles/redis/tasks/preinstall.yml
+++ b/roles/redis/tasks/preinstall.yml
@@ -29,7 +29,5 @@
   become: yes
 
 - name: Ensure that transparent huge page is disabled in Kernel
-  copy:
-    content: "never"
-    dest: /sys/kernel/mm/transparent_hugepage/enabled
+  shell: echo never > /sys/kernel/mm/transparent_hugepage/enabled
   become: yes
