Added cleanup and config stages for redis
Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

--- a/roles/redis/defaults/main.yml
+++ b/roles/redis/defaults/main.yml
@@ -1,3 +1,8 @@
 ---
 upgrade_redis: false
+
 redis_version: 7.0.6
+
+redis_conf_file_location: /etc/redis
+redis_data_dir: /opt/redis/data
+redis_log_dir: /var/log/redis
