--- a/roles/redis/tasks/install.yml
+++ b/roles/redis/tasks/install.yml
@@ -21,7 +21,7 @@
     upgrade_redis
   become: yes
 
-- name: Ensuring the redis server is installed
+- name: Ensuring redis server is installed on the system
   make:
     chdir: "/tmp/redis-{{ redis_version }}"
     target: install
@@ -29,3 +29,41 @@
     not redis_status.stat.exists or
     upgrade_redis
   become: yes
+
+- name: Ensure the tarballs and build directory is cleaned up
+  file:
+    path: "{{ item }}"
+    state: absent
+  with_items:
+    - "/tmp/redis-{{ redis_version }}.tar.gz"
+    - "/tmp/redis-{{ redis_version }}"
+  when: >
+    not redis_status.stat.exists or
+    upgrade_redis
+
+- name: Ensuring that redis group exists in system
+  group:
+    name: "redis"
+    state: present
+
+- name: Ensuring that redis user exists in system
+  user:
+    name: "redis"
+    group: "redis"
+    shell: /sbin/nologin
+    password: "!!"
+    createhome: no
+    system: yes
+    state: present
+
+- name: Ensure the configuration directories are present
+  file:
+    path: "{{ item }}"
+    state: directory
+    recurse: yes
+    owner: redis
+    group: redis
+  with_items:
+    - "{{ redis_log_dir }}"
+    - "{{ redis_data_dir }}"
+    - "{{ redis_conf_file_location }}"
