--- a/roles/redis/defaults/main.yml
+++ b/roles/redis/defaults/main.yml
@@ -1,4 +1,5 @@
 ---
+## COMMON VARIABLES
 upgrade_redis: false
 
 redis_version: 7.0.6
@@ -6,3 +7,67 @@ redis_version: 7.0.6
 redis_conf_file_location: /etc/redis
 redis_data_dir: /opt/redis/data
 redis_log_dir: /var/log/redis
+
+# GENERAL CONFIGURATION
+redis_supervised: "no"
+redis_always_show_logo: "yes"
+redis_daemonize: "no"
+redis_pidfile: "/var/run/redis-{{- redis_port -}}.pid"
+# Number of databases to allow
+redis_databases: 16
+redis_loglevel: notice
+
+# SNAPSHOTTING
+# How frequently to snapshot the database to disk
+# e.g. "900 1" => 900 seconds if at least 1 key changed
+redis_save:
+  - 900 1
+  - 300 10
+  - 60 10000
+redis_stop_writes_on_bgsave_error: "yes"
+redis_rdbcompression: "yes"
+redis_rdbchecksum: "yes"
+# the file name for the RDB Backup
+redis_db_filename: "dump.rdb"
+
+# SLOW LOGS
+# Log queries slower than this many milliseconds. -1 to disable
+redis_slowlog_log_slower_than: 10000
+# Maximum number of slow queries to save
+redis_slowlog_max_len: 128
+
+# APPENDONLY MODE
+redis_appendonly: "no"
+redis_appendfilename: "appendonly.aof"
+redis_appendfsync: "everysec"
+redis_no_appendfsync_on_rewrite: "no"
+redis_auto_aof_rewrite_percentage: "100"
+redis_auto_aof_rewrite_min_size: "64mb"
+
+# CLIENTS
+# Max connected clients at a time
+redis_maxclients: 10000
+
+# MEMORY MANAGEMENT
+redis_maxmemory: false
+redis_maxmemory_policy: noeviction
+
+# NETWORKING/CONNECTION OPTIONS
+redis_bind: "{{ ansible_ssh_host }}"
+redis_tcp_backlog: 511
+redis_tcp_keepalive: 0
+redis_protected_mode: "no"
+redis_timeout: 0
+# Socket options
+# Set socket_path to the desired path to the socket.
+redis_socket_path: false
+redis_socket_perm: 755
+
+redis_conf_file_location: /etc/redis/cluster
+redis_runtime_directory: redis
+
+
+# Disable command
+disable_commands:
+  - FLUSHDB
+  - FLUSHALL
