--- a/roles/redis/tasks/configure.yml
+++ b/roles/redis/tasks/configure.yml
@@ -1,10 +1,24 @@
 ---
+- name: Ensure the configuration directories are present
+  file:
+    path: "{{ item }}"
+    state: directory
+    recurse: yes
+    owner: redis
+    group: redis
+  with_items:
+    - "{{ redis_log_dir }}"
+    - "{{ redis_data_dir }}"
+    - "{{ redis_conf_file_location }}"
+  become: yes
+
 - name: Ensure that redis service exists on the system
   template:
     src: redis.service.j2
     dest: "/etc/systemd/system/redis.service"
     owner: root
     group: root
+  become: yes
   notify:
     - Ensure system daemon reloaded
 
@@ -14,6 +28,6 @@
     dest: "{{ redis_conf_file_location }}/redis.conf"
     owner: redis
     group: redis
+  become: yes
   notify:
     - Ensure redis service is running
-
