Added configuration parameters
Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

--- a/roles/redis/defaults/main.yml
+++ b/roles/redis/defaults/main.yml
@@ -8,6 +8,7 @@ redis_port: 6379
 redis_conf_file_location: /etc/redis
 redis_data_dir: /opt/redis/data
 redis_log_dir: /var/log/redis
+redis_logfile: "/var/log/redis/redis.log"
 
 # GENERAL CONFIGURATION
 redis_supervised: "no"
