Added configuration parameters
Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

--- a/roles/redis/handlers/main.yml
+++ b/roles/redis/handlers/main.yml
@@ -2,9 +2,11 @@
 - name: Ensure system daemon reloaded
   systemd:
     daemon_reload: yes
+  become: yes
 
 - name: Ensure redis service is running
   systemd:
     name: redis.service
     enabled: yes
     state: restarted
+  become: yes
