Added role for redis cluster
Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

--- a/inventory/cluster.ini
+++ b/inventory/cluster.ini
@@ -3,4 +3,16 @@ redis1 ansible_ssh_host=172.31.61.93
 redis2 ansible_ssh_host=172.31.60.203
 redis3 ansible_ssh_host=172.31.62.166
 
-[redis_cluster]
+[redis_cluster:children]
+leader
+follower
+
+[leader]
+redis-leader1 ansible_ssh_host=172.31.61.93 redis_port=6379
+redis-leader2 ansible_ssh_host=172.31.60.203 redis_port=6379
+redis-leader3 ansible_ssh_host=172.31.62.166 redis_port=6379
+
+[follower]
+redis-follower1 ansible_ssh_host=172.31.61.93 redis_port=6380
+redis-follower2 ansible_ssh_host=172.31.60.203 redis_port=6380
+redis-follower3 ansible_ssh_host=172.31.62.166 redis_port=6380
