--- a/cluster.yml
+++ b/cluster.yml
@@ -2,3 +2,7 @@
 - hosts: redis
   roles:
     - { role: redis, tags: ["preinstall", "redis"] }
+
+- hosts: redis_cluster
+  roles:
+    - { role: redis-cluster, tags: ["preinstall", "redis-cluster"] }
