--- a/roles/redis-cluster/vars/leader.yml
+++ b/roles/redis-cluster/vars/leader.yml
@@ -1,6 +1,6 @@
 ---
 redis_conf_file_location: "/etc/redis/cluster/leader"
 redis_logfile: "/var/log/redis/leader/redis.log"
-redis_dir: "/var/lib/redis/leader"
+redis_data_dir: "/var/lib/redis/leader"
 redis_log_dir: "/var/log/redis/leader"
 redis_cluster_config_file: "/etc/redis/cluster/leader/nodes.conf"
