Updated code for redis-cli
Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

--- a/roles/redis-cluster/tasks/main.yml
+++ b/roles/redis-cluster/tasks/main.yml
@@ -8,3 +8,10 @@
   include: follower.yml
   when: >
     inventory_hostname in groups['follower']
+
+- name: Setup of redis sharded cluster setup
+  include: sharded-cluster.yml
+  when: >
+    setup_mode == "sharded" and
+    {{ groups['leader'] | length }} > 1 and
+    {{ groups['follower'] | length }} > 1
